--- a/src/assets/base/_variables.scss
+++ b/src/assets/base/_variables.scss
@@ -3,6 +3,7 @@ $secondary-color: #2676ee;
 $background-color: #f5f5f5;
 $white-color: #ffffff;
 $chat-bg-color: #EBEBEB;
+$dark-grey-color: #2F2F2F;
 
 :root {
   --accent-color: #{$accent-color};
