--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,6 +3,7 @@
 
 @import "./components/containers";
 @import './components/chat';
+@import "./components/button";
 
 @import "layout/header";
 @import "layout/footer";
