--- a/src/assets/blocks/_assistant.scss
+++ b/src/assets/blocks/_assistant.scss
@@ -2,9 +2,30 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  margin-bottom: 28px;
 
   .assistant__info{
     display: flex;
+    align-items: center;
     gap: 10px;
+  }
+
+  .header__assistant__button-helper{
+    background: $background-color;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 4px;
+
+    .header__assistant__circle{
+      border-radius: 50%;
+      width: 5px;
+      height: 5px;
+      background-color: $dark-grey-color;
+    }
   }
 }
