--- a/src/assets/blocks/_assistant.scss
+++ b/src/assets/blocks/_assistant.scss
@@ -1,16 +1,60 @@
-.header__assistant{
+.assistant__container{
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.header__assistant {
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 28px;
 
-  .assistant__info{
+  .assistant__info {
     display: flex;
     align-items: center;
     gap: 10px;
   }
 
-  .header__assistant__button-helper{
+  .header__dropdown {
+    position: relative;
+    display: inline-block;
+
+    .header__dropdown__content {
+      display: none;
+      position: absolute;
+      right: 0;
+      background-color: $white-color;
+      min-width: 332px;
+      box-shadow: 0px 0px 30px 0px #00000014;
+      z-index: 1;
+      border-radius: 8px;
+
+      a {
+        color: black;
+        text-decoration: none;
+        display: block;
+        transition: 0.2s;
+      }
+
+      a:hover {
+        color: $accent-color;
+        text-decoration: none;
+        display: block;
+      }
+    }
+  }
+
+
+  .header__dropdown:hover .header__dropdown__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 12px;
+    padding: 16px 30px;
+  }
+
+  .header__dropdown__button-helper {
     background: $background-color;
     width: 40px;
     height: 40px;
@@ -21,7 +65,7 @@
     align-items: center;
     gap: 4px;
 
-    .header__assistant__circle{
+    .header__dropdown__circle {
       border-radius: 50%;
       width: 5px;
       height: 5px;
