--- a/src/assets/components/_chat.scss
+++ b/src/assets/components/_chat.scss
@@ -8,8 +8,7 @@
   justify-content: space-between;
 
   .chat__content {
-    margin-top:50px;
-    padding: 20px;
+    padding: 50px 20px 0 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,6 +23,7 @@
   .chat__services{
     position: relative;
     top: 30px;
+    padding-left: 20px;
     display: flex;
     gap: 20px;
   }
@@ -65,4 +65,39 @@
     border-radius: 20px;
     padding: 20px;
   }
+}
+
+.chat__messages{
+  display: flex;
+  flex-direction: column;
+  max-height: 330px;
+  gap: 11px;
+  padding: 46px 26px 0 26px;
+  overflow-y: auto;
+  h4{
+    text-align: center;
+  }
+}
+
+.chat__messages__message{
+  width: fit-content;
+  background: $white-color;
+  padding: 16px 22px;
+  border-radius: 12px;
+}
+
+.chat__messages__message-user{
+  float: right;
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.chat__messages__message-assistant{
+  max-width: 70%;
+  display: flex;
+  gap: 8px;
+  flex-direction: column;
+  align-items: flex-start;
 }
