--- a/src/assets/layout/_footer.scss
+++ b/src/assets/layout/_footer.scss
@@ -1,7 +1,98 @@
-footer{
-  height: 95px;
+footer {
   background: #ebebeb;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+
+  .footer__container {
+    margin: 0 auto;
+    max-width: 1300px;
+    width: 100%;
+    height: 95px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    .footer__container__policy, .footer__container__contact, .footer__container__lang, .footer__container__social {
+      display: flex;
+      gap: 12px;
+      justify-content: flex-end;
+      font-size: 15px;
+    }
+
+    .footer__container__lang-selected {
+      color: $accent-color;
+    }
+
+
+  }
+
+  @media (max-width: 786px) {
+    & {
+      width: 100%;
+      display: flex;
+      align-items: center;
+      min-height: 162px;
+      margin-top: 60px;
+
+      .footer__container{
+        width: 100%;
+        margin: 0 40px;
+        display: grid;
+        justify-items: start;
+        .grey__logo-icon{
+          grid-column: 1/4;
+        }
+        .footer__container__policy{
+          grid-column: 4/8;
+        }
+        .footer__container__social{
+          grid-row: 2/3;
+          grid-column: 1/2;
+        }
+        .footer__container__lang{
+          grid-row: 2/3;
+          grid-column: 3/5;
+        }
+        .footer__container__contact{
+          grid-row: 2/3;
+          grid-column: 6/8;
+        }
+      }
+    }
+  }
+
+@media (max-width: 630px) {
+  & {
+    min-height: 292px;
+    background-color: $white-color;
+
+
+    .footer__container{
+      width: 100%;
+      height: 100%;
+      padding: 40px 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+
+
+      //.grey__logo-icon{
+      //  grid-column: 1/4;
+      //}
+      //.footer__container__policy{
+      //  grid-column: 4/8;
+      //}
+      //.footer__container__social{
+      //  grid-row: 2/3;
+      //  grid-column: 1/2;
+      //}
+      //.footer__container__lang{
+      //  grid-row: 2/3;
+      //  grid-column: 3/5;
+      //}
+      //.footer__container__contact{
+      //  grid-row: 2/3;
+      //  grid-column: 6/8;
+      //}
+    }
+  }
+}
 }
