--- a/src/assets/layout/_header.scss
+++ b/src/assets/layout/_header.scss
@@ -2,15 +2,54 @@ header{
   display: flex;
   justify-content: space-between;
 
-  .headerRightSide {
+  .header__right {
     display: flex;
     align-items: center;
     gap: 10px;
+
+    .header__right__buttons{
+      display: flex;
+      gap: 10px;
+    }
 
     span {
       font-weight: 600;
       font-size: 14px;
       line-height: 17px;
     }
+  }
+
+
+  @media (max-width: 630px) {
+    & {
+      display: grid;
+      width: 100%;
+    }
+
+    .header__right{
+      display: flex;
+      width: 100%;
+    }
+
+    .header__right__user, .header__right__procent {
+        display: none;
+    }
+
+    .header__right__procent__text{
+      grid-row: 2/3;
+      &::after{
+        content: ' выручки';
+      }
+    }
+    .header__right__user__mail{
+      grid-row: 1/2;
+    }
+
+    .header__right__buttons{
+      width: 100%;
+      grid-row: 1/3;
+      grid-column: 2/3;
+    }
+
   }
 }
