--- a/src/assets/base/_reset.scss
+++ b/src/assets/base/_reset.scss
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -10,4 +9,15 @@
 
 body {
   background: $background-color;
+
+  h2 {
+    @include font('h2');
+  }
+
+  h3 {
+    @include font('h3');
+  }
+  h4 {
+    @include font('h4');
+  }
 }
