--- a/src/assets/base/_variables.scss
+++ b/src/assets/base/_variables.scss
@@ -2,8 +2,26 @@ $accent-color: #ee26c2;
 $secondary-color: #2676ee;
 $background-color: #f5f5f5;
 $white-color: #ffffff;
-$chat-bg-color: #EBEBEB;
-$dark-grey-color: #2F2F2F;
+$chat-bg-color: #ebebeb;
+$dark-grey-color: #2f2f2f;
+$light-grey-text-color: #525252;
+
+@mixin font($type) {
+  @if ($type == 'h2') {
+    font-size: 24px;
+    font-weight: 600;
+  } @else if ($type == 'h3') {
+    font-size: 18px;
+    font-weight: 600;
+  } @else if ($type == 'h4') {
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+  } @else if ($type == 'p') {
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
 
 :root {
   --accent-color: #{$accent-color};
