--- a/src/assets/blocks/_assistant.scss
+++ b/src/assets/blocks/_assistant.scss
@@ -1,4 +1,4 @@
-.assistant__container{
+.assistant__container {
   display: flex;
   flex-direction: column;
   height: 100%;
@@ -14,6 +14,9 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    .header__assistant__mail {
+      color: $light-grey-text-color;
+    }
   }
 
   .header__dropdown {
@@ -45,7 +48,6 @@
     }
   }
 
-
   .header__dropdown:hover .header__dropdown__content {
     display: flex;
     flex-direction: column;
@@ -70,6 +72,25 @@
       width: 5px;
       height: 5px;
       background-color: $dark-grey-color;
+    }
+  }
+
+  @media (max-width: 630px) {
+    & {
+      flex-direction: column;
+      align-items: normal;
+      gap: 20px;
+      background: $white-color;
+      padding: 20px;
+      margin: 0;
+
+      .assistant__info {
+        justify-content: space-between;
+
+        .header__dropdown {
+          top: -50px;
+        }
+      }
     }
   }
 }
