--- a/src/assets/layout/_footer.scss
+++ b/src/assets/layout/_footer.scss
@@ -10,7 +10,10 @@ footer {
     justify-content: space-between;
     align-items: center;
 
-    .footer__container__policy, .footer__container__contact, .footer__container__lang, .footer__container__social {
+    .footer__container__policy,
+    .footer__container__contact,
+    .footer__container__lang,
+    .footer__container__social {
       display: flex;
       gap: 12px;
       justify-content: flex-end;
@@ -20,11 +23,9 @@ footer {
     .footer__container__lang-selected {
       color: $accent-color;
     }
-
-
   }
 
-  @media (max-width: 786px) {
+  @media (max-width: 950px) {
     & {
       width: 100%;
       display: flex;
@@ -32,26 +33,26 @@ footer {
       min-height: 162px;
       margin-top: 60px;
 
-      .footer__container{
+      .footer__container {
         width: 100%;
         margin: 0 40px;
         display: grid;
         justify-items: start;
-        .grey__logo-icon{
+        .grey__logo-icon {
           grid-column: 1/4;
         }
-        .footer__container__policy{
+        .footer__container__policy {
           grid-column: 4/8;
         }
-        .footer__container__social{
+        .footer__container__social {
           grid-row: 2/3;
           grid-column: 1/2;
         }
-        .footer__container__lang{
+        .footer__container__lang {
           grid-row: 2/3;
           grid-column: 3/5;
         }
-        .footer__container__contact{
+        .footer__container__contact {
           grid-row: 2/3;
           grid-column: 6/8;
         }
@@ -59,40 +60,40 @@ footer {
     }
   }
 
-@media (max-width: 630px) {
-  & {
-    min-height: 292px;
-    background-color: $white-color;
+  @media (max-width: 630px) {
+    & {
+      min-height: 292px;
+      background-color: $white-color;
+      margin-top: 0;
 
+      .footer__container {
+        width: 100%;
+        height: 100%;
+        padding: 40px 20px;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
 
-    .footer__container{
-      width: 100%;
-      height: 100%;
-      padding: 40px 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-
-
-      //.grey__logo-icon{
-      //  grid-column: 1/4;
-      //}
-      //.footer__container__policy{
-      //  grid-column: 4/8;
-      //}
-      //.footer__container__social{
-      //  grid-row: 2/3;
-      //  grid-column: 1/2;
-      //}
-      //.footer__container__lang{
-      //  grid-row: 2/3;
-      //  grid-column: 3/5;
-      //}
-      //.footer__container__contact{
-      //  grid-row: 2/3;
-      //  grid-column: 6/8;
-      //}
+        //.grey__logo-icon{
+        //  grid-column: 1/4;
+        //}
+        //.footer__container__policy{
+        //  grid-column: 4/8;
+        //}
+        //.footer__container__social{
+        //  grid-row: 2/3;
+        //  grid-column: 1/2;
+        //}
+        //.footer__container__lang{
+        //  grid-row: 2/3;
+        //  grid-column: 3/5;
+        //}
+        //.footer__container__contact{
+        //  grid-row: 2/3;
+        //  grid-column: 6/8;
+        //}
+      }
     }
   }
-}
 }
