--- a/src/assets/layout/_header.scss
+++ b/src/assets/layout/_header.scss
@@ -1,13 +1,21 @@
-header{
+@import '@/assets/base/variables';
+header {
   display: flex;
   justify-content: space-between;
+  width: 100%;
 
   .header__right {
     display: flex;
     align-items: center;
     gap: 10px;
 
-    .header__right__buttons{
+    .header__right__info {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .header__right__buttons {
       display: flex;
       gap: 10px;
     }
@@ -19,37 +27,56 @@ header{
     }
   }
 
-
   @media (max-width: 630px) {
     & {
-      display: grid;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+      margin: 0 !important;
+      padding: 28px 20px 20px 20px;
       width: 100%;
+      background: var(--white-color);
     }
 
-    .header__right{
+    .header__right {
       display: flex;
       width: 100%;
+
+      .header__right__info {
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: flex-start;
+        gap: 4px;
+      }
     }
 
-    .header__right__user, .header__right__procent {
-        display: none;
+    .header__right__user,
+    .header__right__procent {
+      display: none;
     }
 
-    .header__right__procent__text{
-      grid-row: 2/3;
-      &::after{
+    .header__right__procent__text {
+      display: flex;
+      font-size: 12px;
+      font-weight: 500;
+      color: #797979;
+
+      &::after {
         content: ' выручки';
       }
     }
-    .header__right__user__mail{
+    .header__right__user__mail {
       grid-row: 1/2;
     }
 
-    .header__right__buttons{
+    .header__right__buttons {
       width: 100%;
+      justify-content: flex-end;
       grid-row: 1/3;
       grid-column: 2/3;
+      rect {
+        fill: $background-color !important;
+      }
     }
-
   }
 }
